Fixed save link on mobile

--- a/NHS111/NHS111.Web/Content/css_NhsUK/confirmation.css
+++ b/NHS111/NHS111.Web/Content/css_NhsUK/confirmation.css
@@ -99,3 +99,7 @@
     width: 100%;
     margin-bottom: 10px;
 }
+
+#copy {
+    margin-right: 10px;
+}
